Updated version to 1.02 and created new CPAN upload
git-svn-id: https://svn.rapanden.dk/svn/netlookup/trunk@2083 c2514f42-cbde-0310-854e-8ab5f9d4de2d

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,10 @@
+Version 1.02 (Sun Dec 30 2007)
+ * Make push_event public, so fake events can be pushed to the queue.
+ * Fixed bug in fixed size buffering
+ * Fix all Perl::Critic warning
+ * Add experimental HTTP buffer type
+ * Fixed bug in socket type detection
+ * Croak when sending to a $fh that is not ours
+
 Version 1.01 (Tue Sep 4 2007)
  * Fixed test that was time dependent
