--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.03 ()
+ * Added support for auto detecting if a socket is in listening mode or not.
+   Listen => 1 on add() is no longer needed.
+
 Version 1.02 (Sun Dec 30 2007)
  * Make push_event public, so fake events can be pushed to the queue.
  * Fixed bug in fixed size buffering
